WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242290
[GStreamer][VideoCapture] fix getVideoSizeAndFormatFromCaps/getVideoResolutionFromCaps for video/x-raw mime-type caps without format
https://bugs.webkit.org/show_bug.cgi?id=242290
Summary
[GStreamer][VideoCapture] fix getVideoSizeAndFormatFromCaps/getVideoResolutio...
James Hilliard
Reported
2022-07-02 07:42:25 PDT
Fixes: gst_video_info_from_caps: no format given
Attachments
Add attachment
proposed patch, testcase, etc.
James Hilliard
Comment 1
2022-07-02 07:44:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2031
EWS
Comment 2
2022-07-04 02:35:08 PDT
Committed
252112@main
(fdb0e95ecfc0): <
https://commits.webkit.org/252112@main
> Reviewed commits have been landed. Closing PR #2031 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug