[GStreamer][VideoCapture] fix getVideoSizeAndFormatFromCaps/getVideoResolutionFromCaps for video/x-raw mime-type caps without format https://bugs.webkit.org/show_bug.cgi?id=242290

Reviewed by Philippe Normand.

Fixes:
0:00:02.001539663  1169 0x5577d2b74810 DEBUG             video-info video-info.c:406:gst_video_info_from_caps: parsing caps video/x-raw
0:00:02.001842884  1169 0x5577d2b74810 ERROR             video-info video-info.c:546:gst_video_info_from_caps: no format given
0:00:02.002197896  1169 0x5577d2b74810 INFO     webkitvideocapturer GStreamerVideoCapturer.cpp:136:setSize: Setting size to 640x480

* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::getVideoSizeAndFormatFromCaps):
(WebCore::getVideoResolutionFromCaps):

Canonical link: https://commits.webkit.org/252112@main